--- a/templates/footer.html
+++ b/templates/footer.html
@@ -1,3 +1,3 @@
 <footer>
-    <a target="_blank" href="https://www.youtube.com/watch?v=5g7j0TrYKMk">Back to home</a>
+    <a  href="{{url_for('index')}}">Back to home</a>
 </footer>
