--- a/templates/index.html
+++ b/templates/index.html
@@ -1,5 +1,5 @@
 {% extends "layout.html" %}
 
 {% block content %}
-    <a href="{{ url_for('mentor_names') }}">Mentor names</a>
+    <a href="{{ url_for('get_mentors_names') }}">Mentor names</a>
 {% endblock %}
