Create query for Miskolc mentors nicknames.

--- a/templates/index.html
+++ b/templates/index.html
@@ -1,5 +1,7 @@
 {% extends "layout.html" %}
 
 {% block content %}
-    <a href="{{ url_for('get_mentors_names') }}">Mentor names</a>
+<a href="{{ url_for('get_mentors_names') }}">Mentor names</a>
+<br>
+<a href="{{url_for('get_mentor_nicks')}}">Miskolc Mentors Nicknames</a>
 {% endblock %}
