Add query for mail provider.

--- a/templates/index.html
+++ b/templates/index.html
@@ -8,4 +8,6 @@
 <br>
 <a href="{{url_for('get_name_info')}}">Carol's Info</a>
 <br>
+<a href="{{url_for('get_mail_info')}}">No One's Info</a>
+<br>
 {% endblock %}
