Add ability to add new applicant.

--- a/templates/index.html
+++ b/templates/index.html
@@ -10,4 +10,6 @@
 <br>
 <a href="{{url_for('get_mail_info')}}">No One's Info</a>
 <br>
+<a href="{{url_for('add_applicant')}}">Add applicant</a>
+<br>
 {% endblock %}
