Add option to delete record from db.

--- a/templates/index.html
+++ b/templates/index.html
@@ -12,4 +12,8 @@
 <br>
 <a href="{{url_for('add_applicant')}}">Add applicant</a>
 <br>
+<a href="{{url_for('update_applicant')}}">Update applicant</a>
+<br>
+<a href="{{url_for('delete_applicant')}}">Delete applicants</a>
+<br>
 {% endblock %}
