--- a/templates/layout.html
+++ b/templates/layout.html
@@ -6,6 +6,7 @@
         <link rel="stylesheet" href="{{ url_for('static', filename='css/main.css') }}">
     </head>
     <body>
+    {% block title %} {% endblock %}
         <div class="content-wrapper">
             {% block content %} {% endblock %}
         </div>
