Create route for applicant info.

--- a/templates/index.html
+++ b/templates/index.html
@@ -16,5 +16,6 @@
     <a href="{{url_for('add_applicant')}}"><button class="btn">Add applicant</button></a>
     <a href="{{url_for('update_applicant')}}"><button class="btn">Update applicant</button></a>
     <a href="{{url_for('delete_applicant')}}"><button class="btn">Delete applicants</button></a>
+    <a href="{{url_for('return_all_applicants')}}"><button class="btn">DOJO - Applicants</button></a>
 </div>
 {% endblock %}
