Create route that returns all mentors and their affiliated schools.

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -114,7 +114,13 @@ footer{
 .content-wrapper {
 
 }
-
+a {
+    text-decoration: none;
+    color: gold;
+}
+a:visited{
+    color:silver;
+}
 font-family: 'Patrick Hand', cursive;
 font-family: 'Unica One', cursive;
 
