--- a/templates/index.html
+++ b/templates/index.html
@@ -17,5 +17,6 @@
     <a href="{{url_for('update_applicant')}}"><button class="btn">Update applicant</button></a>
     <a href="{{url_for('delete_applicant')}}"><button class="btn">Delete applicants</button></a>
     <a href="{{url_for('return_all_applicants')}}"><button class="btn">DOJO - Applicants</button></a>
+     <a href="{{url_for('return_mentors_and_schools')}}"><button class="btn">Week2 - Mentors & Schools</button></a>
 </div>
 {% endblock %}
