Create route for mentors per country.

--- a/templates/index.html
+++ b/templates/index.html
@@ -18,5 +18,7 @@
     <a href="{{url_for('delete_applicant')}}"><button class="btn">Delete applicants</button></a>
     <a href="{{url_for('return_all_applicants')}}"><button class="btn">DOJO - Applicants</button></a>
      <a href="{{url_for('return_mentors_and_schools')}}"><button class="btn">Week2 - Mentors & Schools</button></a>
+     <a href="{{url_for('return_school_join')}}"><button class="btn">Week2 - Mentors & Schools Right Join</button></a>
+    <a href="{{url_for('mentor_per_country')}}"><button class="btn">Week2 - Mentors per Country</button></a>
 </div>
 {% endblock %}
