Create route for school contacts.

--- a/templates/index.html
+++ b/templates/index.html
@@ -20,5 +20,6 @@
      <a href="{{url_for('return_mentors_and_schools')}}"><button class="btn">Week2 - Mentors & Schools</button></a>
      <a href="{{url_for('return_school_join')}}"><button class="btn">Week2 - Mentors & Schools Right Join</button></a>
     <a href="{{url_for('mentor_per_country')}}"><button class="btn">Week2 - Mentors per Country</button></a>
+     <a href="{{url_for('return_contacts')}}"><button class="btn">Week2 - School Contacts</button></a>
 </div>
 {% endblock %}
