--- a/templates/index.html
+++ b/templates/index.html
@@ -21,5 +21,6 @@
      <a href="{{url_for('return_school_join')}}"><button class="btn">Week2 - Mentors & Schools Right Join</button></a>
     <a href="{{url_for('mentor_per_country')}}"><button class="btn">Week2 - Mentors per Country</button></a>
      <a href="{{url_for('return_contacts')}}"><button class="btn">Week2 - School Contacts</button></a>
+    <a href="{{url_for('return_applicants_date')}}"><button class="btn">Week2 - Applicants After Date</button></a>
 </div>
 {% endblock %}
