--- a/templates/index.html
+++ b/templates/index.html
@@ -22,5 +22,6 @@
     <a href="{{url_for('mentor_per_country')}}"><button class="btn">Week2 - Mentors per Country</button></a>
      <a href="{{url_for('return_contacts')}}"><button class="btn">Week2 - School Contacts</button></a>
     <a href="{{url_for('return_applicants_date')}}"><button class="btn">Week2 - Applicants After Date</button></a>
+     <a href="{{url_for('return_applicants_and_mentors')}}"><button class="btn">Week2 - Applicants & Mentors</button></a>
 </div>
 {% endblock %}
